--- a/tests/LatteBundle/DependencyInjection/expected/uiMacros.html
+++ b/tests/LatteBundle/DependencyInjection/expected/uiMacros.html
@@ -1,6 +1,6 @@
-<a href="testing-url">test</a>
-testing-url
-testing-url
+<a href="/testing-url">test</a>
+/testing-url
+/testing-url
 bar
 <strong>Homepage</strong>
 Test
