fixed <form> with class attribute

--- a/tests/LatteBundle/Bridge.Nette.Latte.Macros/expected/formMacros.html
+++ b/tests/LatteBundle/Bridge.Nette.Latte.Macros/expected/formMacros.html
@@ -1,3 +1,5 @@
+<form method="post" action="" class="inline-form">
 <button type="submit"
     id="form_create"
     name="form[create]" class="button">Create</button>
+</form>
