--- a/tests/LatteBundle/Bridge.Nette.Latte.Macros/expected/formMacros.html
+++ b/tests/LatteBundle/Bridge.Nette.Latte.Macros/expected/formMacros.html
@@ -1,4 +1,4 @@
-<form method="post" action="" required="required" class="inline-form">
+<form method="post" action="" class="inline-form">
 <button type="submit"
     id="form_create"
     name="form[create]" class="button">Create</button>
