added test for n:class="" macro

--- a/tests/LatteBundle/Bridge.Nette.Latte.Macros/expected/coreMacros.html
+++ b/tests/LatteBundle/Bridge.Nette.Latte.Macros/expected/coreMacros.html
@@ -5,3 +5,6 @@ for: 012
 ifcontent: OK
 <p>world</p>
 <p class="foo lorem--ipsum"></p>
+
+<a href="#" class="button button--success course__price-box__action"></a>
+<a href="#" class="button course__price-box__action"></a>
